# helium

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
assembler/: .gitkeep  CMakeLists.txt  README.md  readme.md
assembler/include/: assembler.hpp  encoding.hpp  isa.hpp  parser.hpp  symbols.hpp
assembler/src/: assembler.cpp  encoding.cpp  isa.cpp  main.cpp  parser.cpp  symbols.cpp
assembler/tests/: test_assembler.cpp  test_cli.cmake  test_encoding.cpp  test_parser.cpp  test_symbols.cpp
emulator/: .gitkeep
spec/: isa.md
tests/programs/: .gitkeep
